<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:text="@string/guide_test_1"
                tools:ignore="RtlHardcoded" />

            <ImageView
                android:id="@+id/view22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/todo"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/view33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:layout_marginRight="80dp"
                android:padding="10dp"
                android:text="@string/guide_test_3"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/view44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:text="@string/guide_test_4"
                android:inputType="text"
                android:autofillHints="name" />

            <LinearLayout
                android:id="@+id/view55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/guide_test" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@android:drawable/ic_btn_speak_now"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <TextView
                android:id="@+id/view66"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:text="@string/guide_test"
                tools:ignore="RtlHardcoded" />

            <androidx.cardview.widget.CardView
                android:id="@+id/view77"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="10dp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/view88"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:layout_marginRight="80dp"
                android:padding="10dp"
                android:text="@string/guide_test_3"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/view99"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:text="@string/guide_test_last"
                android:inputType="text"
                android:autofillHints="name"
                tools:ignore="LabelFor" />
        </LinearLayout>
    </ScrollView>
</layout>